[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/Area/Lava.gd" type="Script" id=1]
[ext_resource path="res://src/img/Area/env/lava.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "eruption"
length = 2.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Lava" type="Node2D"]
position = Vector2( 96, 96 )
script = ExtResource( 1 )

[node name="RanTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="EruTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="RecTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
region_rect = Rect2( 0, 0, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/eruption = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="RanTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EruTimer" to="." method="_on_AniTimer_timeout"]
[connection signal="timeout" from="RecTimer" to="." method="_on_RecTimer_timeout"]
